--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,22 @@
+.search-container {
+    position: relative;
+    width: 800px;
+    height: auto;
+    margin: 0 auto;
+    box-sizing: border-box;
+}
+
 #google-logo-div {
     margin: 0 auto;
     width: 272px;
+}
+
+#search-form-div {
+    width: 500px;
+    margin: 0 auto;
+}
+
+#search-bar {
+    width: 487px;
+    margin: 0 auto;
 }
