--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+html {
+    font-family: arial;
+}
+
 .search-container {
     position: relative;
     width: 800px;
@@ -19,4 +23,16 @@
 #search-bar {
     width: 487px;
     margin: 0 auto;
+}
+
+.nav-list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    float: right;
+}
+
+li {
+    float: left;
+    padding: 8px;
 }
