--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@ html {
 
 .search-container {
     position: relative;
+    top: 200px;
     width: 800px;
     height: auto;
     margin: 0 auto;
@@ -12,6 +13,7 @@ html {
 
 #google-logo-div {
     margin: 0 auto;
+    padding: 25px;
     width: 272px;
 }
 
@@ -25,14 +27,53 @@ html {
     margin: 0 auto;
 }
 
-.nav-list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+.nav-bar-container {
     float: right;
 }
 
-li {
+.nav-bar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.header {
     float: left;
     padding: 8px;
+}
+
+.footer-container {
+    position: fixed;
+    bottom: 0px;
+    padding: 0px;
+    border: 0px;
+    margin: 0px;
+    width: 100%;
+    height: 40px;
+}
+
+.footer {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+.footer-left {
+    float: left;
+    padding: 5px;
+}
+
+.footer-right {
+    float: right;
+    padding: 5px;
+    margin-right: 10px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    text-decoration: underline;
 }
