--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ html {
 }
 
 #search-bar {
-    width: 487px;
+    width: 527px;
     margin: 0 auto;
     border-radius: 24px;
     height: 44px;
@@ -53,13 +53,16 @@ html {
 .header-link {
     color: rgba(0,0,0,0.87);
     font-size: 13px;
+    padding: 16px 8px;
 }
 
 .footer-container {
     position: fixed;
     bottom: 0px;
+    left: 0px;
     padding: 0px;
     border: 0px;
+    border-top: 1px solid #e4e4e4;
     margin: 0px;
     width: 100%;
     height: 40px;
@@ -78,12 +81,13 @@ html {
 
 .footer-left {
     float: left;
-    padding: 5px;
+    padding: 12px 5px;
+    margin-left: 20px;
 }
 
 .footer-right {
     float: right;
-    padding: 5px;
+    padding: 12px 5px;
     margin-right: 10px;
 }
 
@@ -111,7 +115,7 @@ button {
 
 .search-buttons {
     display: block;
-    width: 291px;
+    width: 295px;
     margin: 14px auto;
 }
 
